# duckdb-crawler

./: CLAUDE.md  CMakeLists.txt  DUCKDB.md  EXAMPLES.md  FIXME.md  IMPROVEMENTS.md  Makefile  README.md  REQUIREMENTS.md  SPEC.md  TODO.md  pushdown.sql  zoho-local.sql
.github/workflows/: MainDistributionPipeline.yml
rust_parser/: Cargo.toml
rust_parser/src/: extractors.rs  ffi.rs
src/: crawl_lateral_function.cpp  crawl_parser.cpp  crawl_stream_function.cpp  crawl_table_function.cpp  crawler_extension.cpp  crawler_function.cpp  crawler_utils.cpp  css_extract_function.cpp  http_client.cpp  hydration_extractor.cpp  importhtml_function.cpp  js_variables_extractor.cpp  json_path_evaluator.cpp  jsonld_extractor.cpp  link_parser.cpp  opengraph_extractor.cpp  robots_parser.cpp  rust_ffi.cpp  sitemap_function.cpp  sitemap_parser.cpp  stream_into_function.cpp  stream_merge_function.cpp  thread_utils.cpp
src/include/: crawl_parser.hpp  crawl_stream_function.hpp  crawl_table_function.hpp  crawler_extension.hpp  crawler_function.hpp  crawler_internal.hpp  crawler_utils.hpp  css_extract_function.hpp  http_client.hpp  importhtml_function.hpp  json_path_evaluator.hpp  jsonld_extractor.hpp  link_parser.hpp  pipeline_state.hpp  robots_parser.hpp  rust_ffi.hpp  sitemap_parser.hpp  stream_into_function.hpp  thread_utils.hpp  yyjson_guard.hpp
test/cpp/: test_js_extractor.cpp
test/sql/: crawling_merge.test  htmlpath_extraction.test  page_info.test  read_html.test
